--- a/_config.yml
+++ b/_config.yml
@@ -103,9 +103,9 @@ gitment:
 # https://github.com/gitalk/gitalk#install
 gitalk:
     owner: doyzfly
-    repo: blog-comments
-    clientID: d2e1cbbd298958076462
-    clientSecret: b42a4178e5fd4a7cf63189ef4b1453b05c375709
+    repo: doyzfly.github.io
+    clientID: db25f512dfcb4573632d
+    clientSecret: 349b42d4378ac7d4af915e3c0b35c0030f5f176c
 # 在使用其它评论组件时可点击显示 Disqus
 lazy_load_disqus : false
 
